# arcade

./: Cargo.toml  Makefile  i586-dos.json
.cargo/: config.toml
src/: dos.rs  gui.rs  main.rs
src/dos/: graphics.rs  keyboard.rs
src/gui/: date.rs  input.rs
