[package]
name = "arcade"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = "0.8.1"
rust_dos = { git="https://github.com/o8vm/rust_dos.git" }

[profile.dev]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
